@@ -105,6 +105,7 @@ Suggests:
     RWeka,
     sda,
     snow,
+    sparsediscrim,
     sparseLDA,
     stepPlr,
     testthat,
