@@ -65,6 +65,7 @@ S3method(makeRLearner,classif.gbm)
 S3method(makeRLearner,classif.geoDA)
 S3method(makeRLearner,classif.glmboost)
 S3method(makeRLearner,classif.glmnet)
+S3method(makeRLearner,classif.hdrda)
 S3method(makeRLearner,classif.kknn)
 S3method(makeRLearner,classif.knn)
 S3method(makeRLearner,classif.ksvm)
@@ -203,6 +204,7 @@ S3method(predictLearner,classif.gbm)
 S3method(predictLearner,classif.geoDA)
 S3method(predictLearner,classif.glmboost)
 S3method(predictLearner,classif.glmnet)
+S3method(predictLearner,classif.hdrda)
 S3method(predictLearner,classif.kknn)
 S3method(predictLearner,classif.knn)
 S3method(predictLearner,classif.ksvm)
@@ -381,6 +383,7 @@ S3method(trainLearner,classif.gbm)
 S3method(trainLearner,classif.geoDA)
 S3method(trainLearner,classif.glmboost)
 S3method(trainLearner,classif.glmnet)
+S3method(trainLearner,classif.hdrda)
 S3method(trainLearner,classif.kknn)
 S3method(trainLearner,classif.knn)
 S3method(trainLearner,classif.ksvm)
