@@ -18,6 +18,7 @@ mlr_2.4:
 
 - new learners:
 -- classif.bst
+-- classif.hdrda
 -- classif.nodeHarvest
 -- classif.pamr
 -- classif.rFerns
